--- a/Step06_Final/WebContent/WEB-INF/web.xml
+++ b/Step06_Final/WebContent/WEB-INF/web.xml
@@ -30,4 +30,14 @@
 		 <res-type>javax.sql.DataSource</res-type>
 		 <res-auth>Container</res-auth>
 	</resource-ref>
+	<!-- 예외가 발생했을 때 forward 이동될 페이지 설정 -->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/404.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/500.jsp</location>
+	</error-page>
 </web-app>
